--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ click==6.6
 Flask==0.12.3
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2>=2.10.1
 MarkupSafe==0.23
 requests==2.20.0
 SQLAlchemy>=1.3.0
